--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 自分の可能性を広げたくて飛び込んだプログラミングスクールで<br>
                 学んだ技術で作ったWEBアプリなど（もちろんこのサイトも作品の一つです）、<br>
                 私が自信を持って「これを作りました！」と言える作品たちを掲載しています。<br>
+                今後レスポンシブデザインにも対応できるよう調整中です！<br>
                 ご覧いただけると幸いです。よろしくお願いします。<br>
             </p>
             
