--- a/skill.html
+++ b/skill.html
@@ -50,11 +50,11 @@
 
 
     <section id="title">
-        <h2>Skill</h2>
+        <h2>ス キ ル</h2>
     </section>
 
     <section id="back_ground">
-        <h3>Back Ground</h3>
+        <h3>学　歴</h3>
         <div class="gakureki">
             <p>2012年3月<br>
                 沖縄県立那覇商業高等学校 会計科 卒業
@@ -66,7 +66,7 @@
     </section>
 
     <section id="technical_skill">
-        <h3>Technical Skill</h3>
+        <h3>テクニカルスキル</h3>
 
         <div class="level">
             <div class="star"><p>★★★★</p><p>-----</p><p>実務経験あり。基本から応用まで、難なく使いこなせます。</p></div>
@@ -161,7 +161,7 @@
     </section>
 
     <section id="qualification">
-        <h3>Qualification（資格）</h3>
+        <h3>資　格</h3>
         <div class="shikaku">
             <p>日本商工会議所主催 簿記検定 2級<br>
                 (2010年11月)
