--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
 
 
     <section id="about">
-        <h2>Profile</h2>
+        <h2>プロフィール</h2>
         <br>
             <img class="guni" src="./img/about/guni.png" alt="">
     </section>
